# matrix_chain_multiplication

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  print_tree.cpp  show_tree.ipynb
benchmarks/: CMakeLists.txt  bench_chain_multiplication.cpp  bench_matrix.cpp
matrix/: CMakeLists.txt  chain_multiplication.cpp  chain_multiplication.h  matrix.cpp  matrix.h  multiplication_tree.h  utils.cpp  utils.h
tests/: CMakeLists.txt  test_chain_multiplication.cpp  test_matrix.cpp  test_multiplication_tree.cpp
